update: update the nav list, and adjust sidenav

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="rd-navbar-nav-wrap">
               <div class="rd-navbar-nav-inner">
                 <ul class="rd-navbar-nav">
-                  <li class="active"><a style="color: #ffff;" href="index.html">Home</a>
+                  <li class="active"><a style="color: rgb(181, 180, 180); font-weight: 900; font-size: large;" href="index.html">Home</a>
                     <!-- <ul class="rd-navbar-megamenu">
                         <li>
                           <p class="rd-megamenu-header"><a href="index.html">Home</a></p>
@@ -132,15 +132,9 @@
                         </li>
                       </ul> -->
                   </li>
-                  <li><a style="color: #ffff;" href="services.html">Services</a>
+                  <li><a style="color: rgb(181, 180, 180); font-weight: 900; font-size: large;" href="services.html">Services</a>
                   </li>
-                  <li><a href="blog.html"></a>
-                    <!-- <ul class="rd-navbar-dropdown">
-                        <li><a href="single-post.html">Single post</a>
-                        </li>
-                      </ul> -->
-                  </li>
-                  <li><a style="color: #ffff;" href="shop.html">Shop</a>
+                  <li><a style="color: rgb(181, 180, 180); font-weight: 900; font-size: large;" href="shop.html">Shop</a>
                     <!-- <ul class="rd-navbar-dropdown">
                         <li><a href="single-product.html">Single product</a>
                         </li>
@@ -150,11 +144,17 @@
                         </li>
                       </ul> -->
                   </li>
-                  <li><a style="color: #ffff;"  href="contacts-1.html">Contacts</a>
+                  <li><a style="color: rgb(181, 180, 180); font-weight: 900; font-size: large;"  href="contacts-1.html">Contacts</a>
                     <!-- <ul class="rd-navbar-dropdown">
                         <li><a href="contacts-1.html">Contacts 1</a>
                         </li>
                         <li><a href="contacts-2.html">Contacts 2</a>
+                        </li>
+                      </ul> -->
+                  </li>
+                  <li><a href="blog.html"></a>
+                    <!-- <ul class="rd-navbar-dropdown">
+                        <li><a href="single-post.html">Single post</a>
                         </li>
                       </ul> -->
                   </li>
