--- a/services.html
+++ b/services.html
@@ -270,7 +270,7 @@
                         </li>
                       </ul> -->
                   </li>
-                  <li><a href="#">Contacts</a>
+                  <li><a href="contacts-1.html">Contacts</a>
                     <!-- <ul class="rd-navbar-dropdown">
                         <li><a href="contacts-1.html">Contacts 1</a>
                         </li>
