update: review feedback implementations

--- a/services.html
+++ b/services.html
@@ -28,7 +28,8 @@
           <div class="page-header-left"><a class="brand" href="index.html"><img
                 src="images/logo-default-dark-200x36.png" alt="" width="200" height="36" /></a></div>
           <div class="page-header-right">
-            <div class="booking-control"><a class="btn btn-xs btn-circle btn-primary" href="step-1.html">BOOK NOW</a>
+            <div class="booking-control">
+              <!-- <a class="btn btn-xs btn-circle btn-primary" href="step-1.html">BOOK NOW</a> -->
             </div>
             <div id="perspective-open-menu" data-custom-toggle=".perspective-menu-toggle"
               data-custom-toggle-hide-on-blur="true"><span class="perspective-menu-text">Menu</span>
@@ -64,39 +65,8 @@
                   <div class="box-service-text">
                     <p>This classic and traditional service is perfect if you want your hair to be done the right way.
                       Our barbers will be glad to help you with it. </p>
-                  </div><a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a>
-                </div>
-              </article>
-              <article class="box-service">
-                <div class="box-service-left"><img class="box-service-image" src="images/services-2-500x490.png" alt=""
-                    width="500" height="490" />
-                </div>
-                <div class="box-service-body">
-                  <div class="box-service-header">
-                    <p class="box-service-title">Beard SHAVE</p>
-                    <p class="box-service-price"><small>€</small>29.<small>00</small>
-                    </p>
                   </div>
-                  <div class="box-service-text">
-                    <p>Beard shave is one of our most popular services. It is a must for all men who want to have a
-                      beard that looks stunning.</p>
-                  </div><a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a>
-                </div>
-              </article>
-              <article class="box-service box-service-dark box-service-reverse">
-                <div class="box-service-left"><img class="box-service-image" src="images/images/bbike.jpeg" alt=""
-                    width="500" height="490" />
-                </div>
-                <div class="box-service-body">
-                  <div class="box-service-header">
-                    <p class="box-service-title">Mustache trim</p>
-                    <p class="box-service-price"><small>€</small>32.<small>00</small>
-                    </p>
-                  </div>
-                  <div class="box-service-text">
-                    <p>Mustaches are a classic facial hair choice for men, and they never seem to go out of style for
-                      long. With us, you can keep your mustache groomed.</p>
-                  </div><a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a>
+                  <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
                 </div>
               </article>
               <article class="box-service">
@@ -106,28 +76,64 @@
                 <div class="box-service-body">
                   <div class="box-service-header">
                     <p class="box-service-title">BEARD TRIM</p>
-                    <p class="box-service-price"><small>€</small>35.<small>00</small>
+                    <p class="box-service-price"><small>€</small>29.<small>00</small>
                     </p>
                   </div>
                   <div class="box-service-text">
                     <p>Today beards require more tailoring than in earlier days. That’s why we believe our beard trim
-                      service may be useful for you.</p>
-                  </div><a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a>
+                    service may be useful for you.</p>
+                  </div>
+                  <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
+                </div>
+              </article>
+              <article class="box-service box-service-dark box-service-reverse">
+                <div class="box-service-left"><img class="box-service-image" src="images/images/ladiessytle-2021.png" alt=""
+                    width="500" height="490" />
+                </div>
+                <div class="box-service-body">
+                  <div class="box-service-header">
+                    <p class="box-service-title">Short sassy Haircut</p>
+                    <p class="box-service-price"><small>€</small>32.<small>00</small>
+                    </p>
+                  </div>
+                  <div class="box-service-text">
+                    <p>Short layered haircuts for women include some of the most creative new looks from modern
+                      stylists.</p>
+                  </div>
+                  <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
+                </div>
+              </article>
+              <article class="box-service">
+                <div class="box-service-left"><img class="box-service-image" src="images/images/ladies-style.jpg" alt=""
+                    width="500" height="490" />
+                </div>
+                <div class="box-service-body">
+                  <div class="box-service-header">
+                    <p class="box-service-title">Braided Hairstyles</p>
+                    <p class="box-service-price"><small>€</small>35.<small>00</small>
+                    </p>
+                  </div>
+                  <div class="box-service-text">
+                    <p>Colorists! Snazzy
+                    means ‘stylish’ and ‘attractive’</p>
+                  </div>
+                  <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
                 </div>
               </article>
             </div>
           </section>
-    <footer class="page-footer page-footer-default">
-      <div class="shell">
-        <div class="range range-xs-center">
-          <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg" width="50px"
-                heigth="50px" alt="" width="200" height="36" /></a>
-            <div class="text-highlighted-wrap">
-              <p class="text-highlighted">Barbershop is a No.1 place to have a men’s haircut in City of Berlin. Here you
-                can
-                get luxury barber experience at a reasonable price.</p>
-            </div>
-            <!-- <ul class="footer-navigation footer-navigation-horizontal">
+          <footer class="page-footer page-footer-default">
+            <div class="shell">
+              <div class="range range-xs-center">
+                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
+                      width="50px" heigth="50px" alt="" width="200" height="36" /></a>
+                  <div class="text-highlighted-wrap">
+                    <p class="text-highlighted">Barbershop is a No.1 place to have a men’s haircut in City of Berlin.
+                      Here you
+                      can
+                      get luxury barber experience at a reasonable price.</p>
+                  </div>
+                  <!-- <ul class="footer-navigation footer-navigation-horizontal">
                           <li class="active"><a href="index.html">Home</a></li>
                           <li><a href="about.html">About</a></li>
                           <li><a href="services.html">Services</a></li>
@@ -135,17 +141,17 @@
                           <li><a href="shop.html">Shop</a></li>
                           <li><a href="contacts-1.html">Contacts</a></li>
                         </ul> -->
-            <!-- <div class="divider divider-small divider-light block-centered"></div>
+                  <!-- <div class="divider divider-small divider-light block-centered"></div>
                         <ul class="inline-list inline-list-md">
                           <li><a class="icon icon-xs link-gray-light fa-facebook" href="#"></a></li>
                           <li><a class="icon icon-xs link-gray-light fa-twitter" href="#"></a></li>
                           <li><a class="icon icon-xs link-gray-light fa-youtube" href="#"></a></li>
                           <li><a class="icon icon-xs link-gray-light fa-linkedin" href="#"></a></li>
                         </ul> -->
-          </div>
-        </div>
-      </div>
-    </footer>
+                </div>
+              </div>
+            </div>
+          </footer>
         </div>
         <div id="perspective-content-overlay"></div>
       </div>
