--- a/contacts-1.html
+++ b/contacts-1.html
@@ -24,7 +24,8 @@
           <div class="page-header-left"><a class="brand" href="index.html"><img src="images/logo-default-dark-200x36.png" alt=""
                 width="200" height="36" /></a></div>
           <div class="page-header-right">
-            <div class="booking-control"><a class="btn btn-xs btn-circle btn-primary" href="step-1.html">BOOK NOW</a>
+            <div class="booking-control">
+              <!-- <a class="btn btn-xs btn-circle btn-primary" href="step-1.html">BOOK NOW</a> -->
             </div>
             <div id="perspective-open-menu" data-custom-toggle=".perspective-menu-toggle"
               data-custom-toggle-hide-on-blur="true"><span class="perspective-menu-text">Menu</span>
@@ -34,11 +35,6 @@
         </div>
           <div id="wrapper">
             <section class="box-wrap box-wrap-md bg-white">
-              <div class="box-wrap-map">
-                <div class="rd-google-map rd-google-map__model" data-zoom="14" data-x="-74.0150000" data-y="40.643180">
-                  <ul class="map_locations"></ul>
-                </div>
-              </div>
               <div class="box-wrap-content">
                 <div class="shell">
                   <div class="range">
