--- a/index.html
+++ b/index.html
@@ -394,7 +394,9 @@
                 <h2 style="color: #333;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
               </div>
               <div class="cell-lg-10">
-
+                <h3 style="color: #333;"> <a class="brand"
+                    href="https://instagram.com/barbershophuerth?igshid=YmMyMTA2M2Y="> <img
+                      src="images/images/instagram.png" height="100px" alt="">barbershophuerth</a></h3>
               </div>
             </div>
           </div>
@@ -411,7 +413,7 @@
           <div class="text-highlighted-wrap">
             <p class="text-highlighted">Barbershop is a No.1 place to get latest in town a men’s haircut and Ladies
               hairstyling in City of Berlin. Here you can get luxury barber experience at a reasonable price.</p>
-          </div>          
+          </div>
         </div>
       </div>
     </div>
