--- a/contacts-1.html
+++ b/contacts-1.html
@@ -49,7 +49,9 @@
                   <h2 style="color: #333;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
                 </div>
                 <div class="cell-lg-10">
-
+                  <h3 style="color: #333;"> <a class="brand"
+                      href="https://instagram.com/barbershophuerth?igshid=YmMyMTA2M2Y="> <img
+                        src="images/images/instagram.png" height="100px" alt="">barbershophuerth</a></h3>
                 </div>
               </div>
             </div>
@@ -65,7 +67,7 @@
                       Ladies
                       hairstyling in City of Berlin. Here you can get luxury barber experience at a reasonable price.
                     </p>
-                  </div>  
+                  </div>
                 </div>
               </div>
             </div>
