update - add price to service page

--- a/services.html
+++ b/services.html
@@ -54,21 +54,21 @@
                 <p class="big" data-language="ourservicedesc">Barbershop bietet erstklassige Herrenhaarschnitte,
                   Bartpflege und heiße Rasiermesserrasur. Hier
                   sind nur einige der Dienstleistungen, für die wir bekannt sind.</p>
-              </div>
+              </div>                         
               <article class="box-service box-service-dark box-service-reverse">
+                <p style="color: #fff; font-size:20px" data-language="beardtrimtittle">UNSERE PAKETE</p>
                 <div class="box-service-left"><img class="box-service-image" src="images/services-1-500x490.png" alt=""
                     width="500" height="490" />
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="tradhaircuttittle">TRADITIONELLE HAARSCHNITTE</p>
-                    <p class="box-service-price"><small> €</small>39.<small>00</small>
+                    <p class="box-service-title" data-language="tradhaircuttittle">Paket-L</p>
+                    <p class="box-service-price"><small> €</small>35.<small>00</small>
                     </p>
                   </div>
                   <div class="box-service-text">
-                    <p data-language="tradhaircuttittledesc">Dieser klassische und traditionelle Service ist perfekt,
-                      wenn Sie möchten, dass Ihr Haar richtig frisiert wird.
-                      Unsere Friseure helfen Ihnen gerne dabei. </p>
+                    <p data-language="tradhaircuttittledesc">Waschen Haarschnitt Fohnen</p>
+                    <p data-language="tradhaircuttittledesc">Bartrasur Waxing komplett Maske </p>
                   </div>
                   <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
                 </div>
@@ -79,14 +79,14 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="beardtrimtittle">Bart trimmen</p>
-                    <p class="box-service-price"><small>€</small>29.<small>00</small>
+                    <p class="box-service-title" data-language="beardtrimtittle">Paket-XL</p>
+                    <p class="box-service-price"><small>€</small>40.<small>00</small>
                     </p>
                   </div>
                   <div class="box-service-text">
-                    <p data-language="beardtrimdesc">Bärte erfordern heute mehr Schneiderei als früher. Deshalb glauben
-                      wir an unseren Bartschnitt
-                      Service kann für Sie nützlich sein.</p>
+                    <p data-language="beardtrimdesc">Waschen Haarschnitt Fohnen</p>
+                    <p data-language="beardtrimdesc">Bartrasur Augenbrauen zupfen </p>
+                    <p data-language="beardtrimdesc">Waxing komplett Maske</p>
                   </div>
                   <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
                 </div>
@@ -97,14 +97,15 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="shorthairtittle">Kurzer frecher Haarschnitt</p>
-                    <p class="box-service-price"><small>€</small>32.<small>00</small>
+                    <p class="box-service-title" data-language="shorthairtittle">Paket-XXL</p>
+                    <p class="box-service-price"><small>€</small>45.<small>00</small>
                     </p>
                   </div>
                   <div class="box-service-text">
-                    <p data-language="shorthairdesc">Kurzgeschichtete Haarschnitte für Frauen beinhalten einige der
-                      kreativsten neuen Looks der Moderne
-                      Stylisten.</p>
+                    <p data-language="shorthairdesc">Waschen Haarschnitt Fohnen</p>
+                    <p data-language="shorthairdesc">Bartrasur Bart farben Augenbrauen</p>
+                    <p data-language="shorthairdesc">zupfen Waxing komplett Maske</p>
+
                   </div>
                   <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
                 </div>
@@ -115,12 +116,24 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="braidhairtittle">Geflochtene Frisuren</p>
-                    <p class="box-service-price"><small>€</small>35.<small>00</small>
+                    <p class="box-service-title" data-language="braidhairtittle">NEUEROFFNUNG</p>
+                    <!-- <p class="box-service-price"><small>€</small>35.<small>00</small> -->
                     </p>
                   </div>
-                  <div class="box-service-text">
-                    <p data-language="braidhairdesc">Koloristen! Snazzy bedeutet stilvoll und attraktiv</p>
+                  <div class="box-service-text" style="line-height: 2px;">
+                    <p data-language="braidhairdesc">Haarschnitt - 15.00€</p>
+                    <p data-language="braidhairdesc">Waschen Schneiden Fohnen - 18.00€</p>
+                    <p data-language="braidhairdesc">Maschinenschnitt - 12.00€</p>
+                    <p data-language="braidhairdesc">Kinder bis 10 Jahren - 10.00€</p>
+                    <p data-language="braidhairdesc">Bartrasur - 10.00€</p>
+                    <p data-language="braidhairdesc">Bart farben - 10.00€</p>
+                    <p data-language="braidhairdesc">Augenbrauen zupfen - 8.00€</p>
+                    <p data-language="braidhairdesc">Augenbrauen farben - 5.00€</p>
+                    <p data-language="braidhairdesc">Haare farben - 20.00€</p>
+                    <p data-language="braidhairdesc">Strahnen (auf Anfrage) Maske - 5.00€</p>
+                    <p data-language="braidhairdesc">Waxing Ohren & Nase - 3.00€</p>
+                    <p data-language="braidhairdesc">Waxing Gesicht - 5.00€</p>
+
                   </div>
                   <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
                 </div>
