added font weight accross pages

--- a/contacts-1.html
+++ b/contacts-1.html
@@ -64,7 +64,7 @@
                 <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
                       height="150px" /></a>
                   <div class="text-highlighted-wrap">
-                      <p class="text-highlighted" data-language="footerdesc">Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
+                      <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 500;">Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
                         Herrenhaarschnitt und Damenfrisuren zu bekommen Haarstyling in
                         Berlin City. Hier erhalten Sie luxuriöse Friseurerfahrung zu einem vernünftigen Preis.</p>
                       </div>
