--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="range range-sm-center">
               <div class="cell-sm-9 cell-md-8 cell-lg-7">
                 <h1 style="color: #fff;" data-language="herotittle">Genießen Sie unseren Friseurservice</h1>
-                <p class="large" data-language="herodesc">Schaffen Sie mit Barbershop-Services Ihren neuen, umwerfenden
+                <p class="large" data-language="herodesc" style=" color:white; font-weight: 600;">Schaffen Sie mit Barbershop-Services Ihren neuen, umwerfenden
                   Look! Aus Haarschnitte bis hin zu heißen Rasuren, Sie
                   können das beste Friseurhandwerk in der Gegend erleben.</p>
                 <button id="open" class="btn btn-style-1 btn-primary" data-language="heroappointment"> Vereinbare einen
@@ -96,7 +96,7 @@
           <div class="cell-md-5 cell-lg-4">
             <div class="inset-1">
               <h2 data-language="whowearetittle">WER WIR SIND</h2>
-              <div class="p text-width-smallest">
+              <div class="p text-width-smallest" style=" color:black; font-weight: 600;">
                 <p class="big" data-language="whowearedesc">Experte für alle Haartexturen und spezialisiert auf
                   Relaxers, Texturizers, Cutting & Coloring. Der Salon verwendet nur
                   die besten Haarpflegeprodukte und -materialien, um die genauen Ergebnisse zu erzielen, die Sie sich
@@ -178,7 +178,7 @@
             style="background-image: url(images/home-three-2-910x800.jpg);">
             <div class="image-wrap-inner">
               <h2 data-language="ourservicestittle">UNSERE LEISTUNGEN</h2>
-              <p class="big" data-language="ourservicesdesc">Kinderhaarschnitt, Föhnstange, Coloration, Damensträhnen,
+              <p class="big" data-language="ourservicesdesc" style=" color:black; font-weight: 600;">Kinderhaarschnitt, Föhnstange, Coloration, Damensträhnen,
                 Herrenhaarschnitt einschließlich Kevin Murphy-Produkten und
                 Styling & Färben für Damen, Tönung, Farbaufhellung</p>
             </div>
@@ -263,7 +263,7 @@
                     width="370" height="310" />
                   <div class="thumbnail-card-body">
                     <div class="thumbnail-card-text">
-                      <p data-language="ourbarbersdesc">Wir alle heißen Kunden willkommen und beraten sie zu ihren
+                      <p data-language="ourbarbersdesc" style=" color:black; font-weight: 600;">Wir alle heißen Kunden willkommen und beraten sie zu ihren
                         gewünschten Frisuren. Schneiden und Trimmen der Haare nach
                         Kundenvorgabe. Haarstyling mit chemischen Lösungen und Stylingwerkzeugen. Rasieren, Trimmen und
                         Formen der Bärte und
@@ -303,7 +303,7 @@
         <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
               height="150px" /></a>
           <div class="text-highlighted-wrap">
-            <p class="text-highlighted" data-language="footerdesc">Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
+            <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 600;" >Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
               Herrenhaarschnitt und Damenfrisuren zu bekommen Haarstyling in
               Berlin City. Hier erhalten Sie luxuriöse Friseurerfahrung zu einem vernünftigen Preis.</p>
           </div>
