--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
             <div class="shell">
               <h2 data-language="ourservices">Unsere Leistungen</h2>
               <div class="p text-width-medium">
-                <p class="big" data-language="ourservicedesc">Barbershop bietet erstklassige Herrenhaarschnitte,
+                <p class="big" data-language="ourservicedesc" style=" color:black; font-weight: 500;">Barbershop bietet erstklassige Herrenhaarschnitte,
                   Bartpflege und heiße Rasiermesserrasur. Hier
                   sind nur einige der Dienstleistungen, für die wir bekannt sind.</p>
               </div>                         
@@ -83,7 +83,7 @@
                     <p class="box-service-price"><small>€</small>40.<small>00</small>
                     </p>
                   </div>
-                  <div class="box-service-text">
+                  <div class="box-service-text" style="color: black; font-weight: 500;">
                     <p data-language="beardtrimdesc">Waschen Haarschnitt Fohnen</p>
                     <p data-language="beardtrimdesc">Bartrasur Augenbrauen zupfen </p>
                     <p data-language="beardtrimdesc">Waxing komplett Maske</p>
@@ -114,14 +114,14 @@
                 <div class="box-service-left"><img class="box-service-image" src="images/images/ladies-style.jpg" alt=""
                     width="500" height="490" />
                 </div>
-                <div class="box-service-body">
+                <div class="box-service-body" style="color: black;">
                   <div class="box-service-header">
                     <p class="box-service-title" data-language="braidhairtittle">NEUEROFFNUNG</p>
                     <!-- <p class="box-service-price"><small>€</small>35.<small>00</small> -->
                     </p>
                   </div>
-                  <div class="box-service-text" style="line-height: 2px;">
-                    <p data-language="braidhairdesc">Haarschnitt - 15.00€</p>
+                  <div class="box-service-text" style="line-height: 2px; color: black; font-weight: 500;">
+                    <p data-language="braidhairdesc">Haarschnitt - 18.00€</p>
                     <p data-language="braidhairdesc">Waschen Schneiden Fohnen - 18.00€</p>
                     <p data-language="braidhairdesc">Maschinenschnitt - 12.00€</p>
                     <p data-language="braidhairdesc">Kinder bis 10 Jahren - 10.00€</p>
