--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           <div class="cell-xs-12">
             <h2 data-language="ourbarberstittle">UNSERE FRISEURE</h2>
             <div class="p text-width-medium">
-              <p class="big" data-language="ourbarbersheading">Wir beschäftigen nur hochqualifizierte Friseure, die
+              <p class="big" data-language="ourbarbersheading" style="color:white; font-weight: 500;">Wir beschäftigen nur hochqualifizierte Friseure, die
                 nicht nur Profis sind, sondern auch Spaß daran haben
                 Aufrechterhaltung der Atmosphäre eines klassischen Barbershops.</p>
             </div>
