--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
                     <p class="box-service-price"><small> €</small>35.<small>00</small>
                     </p>
                   </div>
-                  <div class="box-service-text">
+                  <div class="box-service-text" style="color:white; font-weight: 500;">
                     <p data-language="tradhaircuttittledesc">Waschen Haarschnitt Fohnen</p>
                     <p data-language="tradhaircuttittledesc">Bartrasur Waxing komplett Maske </p>
                   </div>
@@ -101,7 +101,7 @@
                     <p class="box-service-price"><small>€</small>45.<small>00</small>
                     </p>
                   </div>
-                  <div class="box-service-text">
+                  <div class="box-service-text" style="color:white; font-weight: 500;">
                     <p data-language="shorthairdesc">Waschen Haarschnitt Fohnen</p>
                     <p data-language="shorthairdesc">Bartrasur Bart farben Augenbrauen</p>
                     <p data-language="shorthairdesc">zupfen Waxing komplett Maske</p>
