fix: fix gallery, hero, and pricing table

--- a/gallery.html
+++ b/gallery.html
@@ -63,36 +63,36 @@
             <div class="shell">
               <div class="range range-30">
                 <div class="cell-sm-6 cell-md-6 height-fill">
-                  <div><img class="thumbnail-card-image" src="images/home-three-3-1011x800.jpg" alt="" width="370"
+                  <div><img class="thumbnail-card-image" src="images/images/Gallery/guys1.JPG" alt="" width="370"
                       height="310" />
                   </div>
                 </div>
                 <div class="cell-sm-6 cell-md-6 height-fill">
-                  <div><img class="thumbnail-card-image" src="images/home-three-3-1011x800.jpg" alt="" width="370"
-                      height="310" />
-                  </div>
-                </div>
-              </div>
-              <div class="range range-30">
-                <div class="cell-sm-6 cell-md-6 height-fill">
-                  <div><img class="thumbnail-card-image" src="images/post-single-1-1170x600.jpg" alt="" width="370"
-                      height="310" />
-                  </div>
-                </div>
-                <div class="cell-sm-6 cell-md-6 height-fill">
-                  <div><img class="thumbnail-card-image" src="images/post-single-1-1170x600.jpg" alt="" width="370"
+                  <div><img class="thumbnail-card-image" src="images/images/Gallery/guys3.JPG" alt="" width="370"
                       height="310" />
                   </div>
                 </div>
               </div>
               <div class="range range-30">
                 <div class="cell-sm-6 cell-md-6 height-fill">
-                  <div><img class="thumbnail-card-image" src="images/images/ladies-style.jpg" alt="" width="370"
+                  <div><img class="thumbnail-card-image" src="images/images/Gallery/ladies1.JPG" alt="" width="370"
                       height="310" />
                   </div>
                 </div>
                 <div class="cell-sm-6 cell-md-6 height-fill">
-                  <div><img class="thumbnail-card-image" src="images/images/ladies-style.jpg" alt="" width="370"
+                  <div><img class="thumbnail-card-image" src="images/images/Gallery/ladies3.PNG" alt="" width="370"
+                      height="310" />
+                  </div>
+                </div>
+              </div>
+              <div class="range range-30">
+                <div class="cell-sm-6 cell-md-6 height-fill">
+                  <div><img class="thumbnail-card-image" src="images/images/Gallery/guys2.JPG" alt="" width="370"
+                      height="310" />
+                  </div>
+                </div>
+                <div class="cell-sm-6 cell-md-6 height-fill">
+                  <div><img class="thumbnail-card-image" src="images/images/Gallery/ladies2.JPG" alt="" width="370"
                       height="310" />
                   </div>
                 </div>
