--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Roboto+Mono:300,300italic,400,700%7CArvo:400,700">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/table.css">
 </head>
 
 <body>
@@ -62,7 +63,7 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="tradhaircuttittle">Paket-L</p>
+                    <p class="box-service-title" data-language="tradhaircuttittle" style="font-size: 18px; font-weight: 700;">Paket-L</p>
                     <p class="box-service-price"><small> €</small>35.<small>00</small>
                     </p>
                   </div>
@@ -74,12 +75,12 @@
                 </div>
               </article>
               <article class="box-service">
-                <div class="box-service-left"><img class="box-service-image" src="images/images/b2image1.jpeg" alt=""
+                <div class="box-service-left"><img class="box-service-image" src="images/images/Gallery/guys4.JPG" alt=""
                     width="500" height="490" />
                 </div>
-                <div class="box-service-body">
+                <div class="box-service-body" style="color: black; background-color: #f6f5ef;">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="beardtrimtittle">Paket-XL</p>
+                    <p class="box-service-title" data-language="beardtrimtittle" style="font-size: 18px; font-weight: 700;">Paket-XL</p>
                     <p class="box-service-price"><small>€</small>40.<small>00</small>
                     </p>
                   </div>
@@ -97,7 +98,7 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="shorthairtittle">Paket-XXL</p>
+                    <p class="box-service-title" data-language="shorthairtittle" style="font-size: 18px; font-weight: 700;">Paket-XXL</p>
                     <p class="box-service-price"><small>€</small>45.<small>00</small>
                     </p>
                   </div>
@@ -111,33 +112,72 @@
                 </div>
               </article>
               <article class="box-service">
-                <div class="box-service-left"><img class="box-service-image" src="images/images/ladies-style.jpg" alt=""
+                <div class="box-service-left"><img class="box-service-image" src="images/images/Gallery/ladies1.JPG" alt=""
                     width="500" height="490" />
                 </div>
-                <div class="box-service-body" style="color: black;">
+                <div class="box-service-body" style="color: black; background-color: #f6f5ef;" >
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="braidhairtittle">NEUEROFFNUNG</p>
+                    <p class="box-service-title" data-language="braidhairtittle" style="font-size: 18px; font-weight: 700;" >NEUEROFFNUNG</p>
                     <!-- <p class="box-service-price"><small>€</small>35.<small>00</small> -->
                     </p>
                   </div>
-                  <div class="box-service-text" style="line-height: 2px; color: black; font-weight: 500;">
-                    <p data-language="braidhairdesc">Haarschnitt - 18.00€</p>
-                    <p data-language="braidhairdesc">Waschen Schneiden Fohnen - 18.00€</p>
-                    <p data-language="braidhairdesc">Maschinenschnitt - 12.00€</p>
-                    <p data-language="braidhairdesc">Kinder bis 10 Jahren - 10.00€</p>
-                    <p data-language="braidhairdesc">Bartrasur - 10.00€</p>
-                    <p data-language="braidhairdesc">Bart farben - 10.00€</p>
-                    <p data-language="braidhairdesc">Augenbrauen zupfen - 8.00€</p>
-                    <p data-language="braidhairdesc">Augenbrauen farben - 5.00€</p>
-                    <p data-language="braidhairdesc">Haare farben - 20.00€</p>
-                    <p data-language="braidhairdesc">Strahnen (auf Anfrage) Maske - 5.00€</p>
-                    <p data-language="braidhairdesc">Waxing Ohren & Nase - 3.00€</p>
-                    <p data-language="braidhairdesc">Waxing Gesicht - 5.00€</p>
 
+                  <div>
+                    <table>                      
+                      <tbody style="background-color: #f6f5ef;">
+                        <tr>
+                          <td><strong>Haarschnitt</strong></td>
+                          <td>18.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Waschen Schneiden Fohnen</strong></td>
+                          <td>18.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Maschinenschnitt</strong></td>
+                          <td>12.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Kinder bis 10 Jahren</strong></td>
+                          <td>10.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Bartrasur</strong></td>
+                          <td>10.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Bart farben</strong></td>
+                          <td>10.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Augenbrauen zupfen</strong></td>
+                          <td>8.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Augenbrauen farben</strong></td>
+                          <td>5.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Haare farben</strong></td>
+                          <td>20.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Strahnen (auf Anfrage)</strong></td>
+                          <td>5.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Waxing Ohren & Nase</strong></td>
+                          <td>3.00€</td>
+                        </tr>
+                        <tr>
+                          <td><strong>Waxing Gesicht</strong></td>
+                          <td>5.00€</td>
+                        </tr>                        
+                      </tbody>
+                    </table>
                   </div>
-                  <!-- <a class="btn btn-sm box-service-control" href="step-1.html">Book Now</a> -->
-                </div>
-              </article>
+                </div>                
+              </article>              
             </div>
           </section>
           <footer class="page-footer page-footer-default">
