--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Roboto+Mono:300,300italic,400,700%7CArvo:400,700">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/table.css">
 </head>
  
 <body>
@@ -73,7 +74,7 @@
 
       <section id="hero_now"
         class="jumbotron-custom jumbotron-custom-3 bg-white bg-image bg-image-custom bg-image-center"
-        style="background-image: url(images/images/bteam.jpeg);">
+        style="background-image: url(images/images/b2-just2-guys.jpeg); background-position: center; background-repeat: no-repeat; height: auto;">
         <div class="jumbotron-custom-content text-center">
           <div class="shell">
             <div class="range range-sm-center">
@@ -367,9 +368,9 @@
   <div class="moodal-container" id="moodal-container">
     <div class="moodal">
       <img src="./images/images/icons8-ok-100.png" alt="">
-      <h3 data-language="appointmenttittle">Um Ihren Termin zu buchen, nutzen Sie bitte unsere Kontaktdaten</h3>
-      <h4 data-language="appointmentdesc">Rufen Sie an oder senden Sie eine SMS</h4>
-      <h2 data-language="appointmentphone">+9457688234</h2>
+      <h3 data-language="appointmenttittle">Um Ihren Termin zu buchen, nutzen Sie bitte unsere Kontaktdaten.</h3>
+      <h4 data-language="appointmentdesc">Klicken Sie hier, um anzurufen oder eine SMS zu senden</h4>
+      <h2 data-language="appointmentphone"><a href="tel:945-768-8234" style="color: rgb(0, 57, 136);" >+9457688234</a></h2>
       <button id="close" class="btn btn-style-1 btn-primary" data-language="close">
         nah dran
       </button>
@@ -384,7 +385,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"
     integrity="sha512-CX7sDOp7UTAq+i1FYIlf9Uo27x4os+kGeoT7rgwvY+4dmjqV0IuE/Bl5hVsjnQPQiTOhAX1O2r2j5bjsFBvv/A=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="/js/translate.js"></script>
   <script>
     const open = document.getElementById('open');
     const moodalContainer = document.getElementById('moodal-container');
